Fix overflowing height/width bug

--- a/apps/frontend/src/pages/ErrorPage/ErrorPage.module.css
+++ b/apps/frontend/src/pages/ErrorPage/ErrorPage.module.css
@@ -14,9 +14,9 @@
 }
 
 .column {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   padding: 0;
-  min-width: 0;
+  /* min-width: 0; */
 }
 
 .errorColumn {
